rafact: change names and adding endpoint
Adding EndPoint: Pedidos do Cliente

Refacting change all Order/Pedido
